<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leader_board_header_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/leader_board_pos"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/leader_board_padding"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:text="@string/leader_board_rank_lbl"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leader_board_rating"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/leader_board_padding"
        android:paddingStart="@dimen/leader_board_padding"
        android:text="@string/leader_board_rating_lbl"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leader_board_wins"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:paddingEnd="@dimen/leader_board_padding"
        android:paddingStart="@dimen/leader_board_padding"
        android:text="@string/leader_board_wins_lbl"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leader_board_losses"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/leader_board_padding"
        android:paddingStart="@dimen/leader_board_padding"
        android:text="@string/leader_board_losses_lbl"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leader_board_name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingEnd="@dimen/leader_board_padding"
        android:paddingStart="@dimen/leader_board_padding"
        android:text="@string/leader_board_player_lbl"
        android:textAlignment="textStart"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="bold" />

</LinearLayout>