<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/new_match_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/new_match_your_opponent_lbl" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <AutoCompleteTextView
                android:id="@+id/new_match_opponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:completionThreshold="1"
                android:gravity="center"
                android:hint="@string/new_match_opponent_lbl" />

            <include
                android:id="@+id/new_match_confirmed_opponent"
                layout="@layout/new_match_opponent"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/new_match_clear_opponent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_clear_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_match_your_wins_lbl" />

                <Spinner
                    android:id="@+id/new_match_wins"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <TextView
                android:id="@+id/new_match_result"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLargeInverse"
                tools:text="W" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_match_your_losses_lbl" />

                <Spinner
                    android:id="@+id/new_match_losses"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/new_match_submit_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_match_submit_btn_lbl"
            android:theme="@style/Button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_match_submitting_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dip"
            android:singleLine="true"
            android:text="@string/new_match_submitting_lbl"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_match_match_submission_result_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/new_match_submission_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingTop="4dip"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/new_match_submission_continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_match_continue_btn_lbl"
            android:theme="@style/Button" />

    </LinearLayout>

</RelativeLayout>